# pubmed-types

./: .bumpversion.cfg  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: pypi.yaml
src/pubmed_types/: __init__.py
src/pubmed_types/models/: __init__.py  abstract_1.py  abstract_text.py  abstract_text_nlm_category.py  access_date.py  affiliation.py  alt_text.py  app.py  app_group.py  archive_copy_source.py  array_orientation.py  article_1.py  article_2.py  article_categories.py  article_date.py  article_id_1.py  article_id_id_type.py  article_id_list.py  article_meta.py  article_set.py  article_title_1.py  article_version.py  article_version_alternatives.py  author.py  author_list.py  author_list_complete_yn.py  author_list_type.py  author_valid_yn.py  award_desc.py  award_group.py  award_name.py  back.py  body.py  bold_toggle.py  book.py  book_document.py  book_title.py  boxed_text_orientation.py  chem_struct_wrap_orientation.py  chem_struct_wrap_position.py  (+165 more)
src/pubmed_types/models/jats/: __init__.py  abbrev_journal_title.py  access_date.py  app.py  app_group.py  article.py  article_dtd_version.py  article_id.py  article_meta.py  article_version.py  author_notes.py  award_desc.py  award_group.py  award_name.py  body.py  boxed_text_position.py  break_mod.py  city.py  code_position.py  col.py  col_align.py  colgroup.py  colgroup_align.py  conf_num.py  conference.py  contrib_deceased.py  contrib_equal_contrib.py  contrib_id.py  contrib_id_authenticated.py  corresp.py  custom_meta.py  event.py  event_desc.py  extended_by.py  fig_count.py  fig_group_orientation.py  fig_group_position.py  fig_orientation.py  fig_position.py  fpage.py  (+68 more)
src/pubmed_types/models/pubmed/: __init__.py  abstract.py  abstract_text.py  accession_number_list.py  affiliation.py  affiliation_info.py  article.py  article_id.py  article_id_list.py  article_pub_model.py  article_title.py  author.py  author_equal_contrib.py  beginning_date.py  book.py  book_document.py  book_document_set.py  book_title.py  citation.py  citation_string.py  coi_statement.py  data_bank.py  (+52 more)
tests/: test_pmcarticle.py
(+183 files in other folders)
